<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Weather Forecast</string>
    <string name="current_date">15.05.20</string>
    <string name="now">сейчас</string>
    <string name="_hour_one">+1ч</string>
    <string name="hour_two">+2ч</string>
    <string name="hour_three">+3ч</string>
    <string name="hour_four">+4ч</string>
    <string name="hour_five">+5ч</string>
    <string name="wind_speed">скорость ветра</string>
    <string name="pressure">давление</string>
    <string name="tool_bar_menu">Меню</string>
    <string name="enter_the_city">Выберите город</string>
    <string name="temperature">0</string>
    <string name="current_time">22:30</string>
    <string name="find_out_the_weather" translatable="false">Узнать погоду</string>
    <string name="defaultUrl" translatable="false">https://yandex.ru/pogoda/213</string>
    <string name="go" translatable="false">go</string>
    <string name="discovery_btn_weather">Посмотреть погоду</string>
    <string name="empty_list" tools:ignore="MissingTranslation">Empty list</string>
</resources>
