<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/defaultUrl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClickOpenOnBrowser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:text="@string/go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextUrl"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:text="@string/temperature"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUrl">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/BtnCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now" />


            <Button
                android:id="@+id/BtnIncreaseByOneHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_hour_one" />

            <Button
                android:id="@+id/BtnIncreaseByTwoHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_two" />

            <Button
                android:id="@+id/BtnIncreaseByThreeHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_three" />

            <Button
                android:id="@+id/BtnIncreaseByFourHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_four" />

            <Button
                android:id="@+id/BtnIncreaseByFiveHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_five" />

        </TableRow>

    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>