<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:ignore="MissingConstraints">


    <Button
        android:id="@+id/DiscoveryBtnWeather"
        android:layout_width="201dp"
        android:layout_height="41dp"
        android:layout_marginTop="112dp"
        android:text="@string/find_out_the_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:paddingEnd="5dp"
        android:text="@string/current_date"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentTime"
        android:layout_width="67dp"
        android:layout_height="34dp"
        android:layout_marginTop="3dp"
        android:paddingStart="3dp"
        android:text="@string/current_time"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>